@@ -19,24 +19,44 @@ c = conn.cursor()
 try:
     c.execute('''create table depend
               (id integer, pkg text, depPkg text)''')
+    c.execute('''create table subPkg
+              (id integer, pkg text, subPkg text)''')
 except:
     c.execute("delete from depend")
+    c.execute("delete from subPkg")
     conn.commit()
 
 # add all dependency
 id = 0
+ids = 0
 for pkg in pkglist:
-    print id, pkg
-
     depPackage = []
+    subPackage = []
+    macros = {'name':pkg}
     spec = open(os.path.join(DEFFILE.PKGDIR, pkg, pkg + '.spec'))
     for content in spec.readlines():
-        if not content.lower().startswith('buildrequires:') and \
-                not content.lower().startswith('buildprereq:'):
-            continue
-        elif content.startswith('%prep'):
+        if content.startswith('%prep'):
             break
-        else:
+        elif content.startswith('%defile') or content.startswith('%global'):
+            contentList = content.split()
+            macroName = ''
+            for cont in contentList[1:]:
+                if cont != ' ':
+                    if macroName == '':
+                        macroName = cont
+                    else:
+                        macroData = cont
+            macros[macroName] = macroData
+        elif content.startswith('%package'):
+            for macro in macros.iterkeys():
+                content = content.replace('%{' + macro + '}', macros[macro])
+            contentList = content.split()
+            if contentList[1] == '-n':
+                subPackage.append(contentList[2])
+            else:
+                subPackage.append(pkg + '-' + contentList[1])
+        elif content.lower().startswith('buildrequires:') or \
+                content.lower().startswith('buildprereq:'):
             while content.endswith('\\'):
                 nextLine = spec.readline()
                 if not nextline.startswith('#'):
@@ -50,6 +70,10 @@ for pkg in pkglist:
         vt = (id, pkg, depend)
         c.execute('insert into depend values (?, ?, ?)', vt)
         id += 1
+    for subPkg in subPackage:
+        vt = (id, pkg, subPkg)
+        c.execute('insert into subPkg values (?, ?, ?)', vt)
+        ids += 1
 
 # close db
 conn.commit()
